<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.melvin.ongandroid.view.HomeFragment"
        android:label="@string/title_intro"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_newsFragment"
            app:destination="@id/newsFragment" />
    </fragment>
    <navigation android:id="@+id/flowLogSign"
        app:startDestination="@id/loginFragment">
        <fragment
            android:id="@+id/loginFragment"
            android:name="com.melvin.ongandroid.view.LoginFragment"
            android:label="@string/title_intro"
            tools:layout="@layout/fragment_login">
            <action
                android:id="@+id/action_loginFragment_to_signUpFragment"
                app:destination="@id/signUpFragment" />
        </fragment>
        <fragment
            android:id="@+id/signUpFragment"
            android:name="com.melvin.ongandroid.view.SignUpFragment"
            android:label="@string/register"
            tools:layout="@layout/fragment_sign_up" />
        <action
            android:id="@+id/action_global_homeFragment"
            app:destination="@id/homeFragment" />
    </navigation>
    <fragment
        android:id="@+id/newsFragment"
        android:name="com.melvin.ongandroid.view.NewsFragment"
        android:label="@string/title_ult_novedades"
        tools:layout="@layout/fragment_news" />
</navigation>